# django-erp-framework

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README.rst  docker-compose.yml  requirements.txt  setup.cfg  setup.py  todo.md  vendor.yaml
docs/: requirements.txt
docs/source/: Walkthrough.rst  conf.py  faq.rst  index.rst  requirements.txt  settings.py
docs/source/advanced_topics/: admin.rst  base_classes.rst  charting.rst  customizing_print.rst  index.rst  javascript.rst  page_help.rst  permissions.rst  report_fields.rst  reporting.rst  roadmap.rst  settings.rst  themeing.rst
docs/source/getting_started/: components.rst  faq.rst  index.bak  index.rst  integrating_into_django.rst  quickstart.rst
docs/source/release_notes/: index.rst  release_0.1.1.rst  release_1.0.0.rst  release_1.5.0.rst  release_1.5.2.rst
docs/source/topics/: admin.rst  base_classes.rst  customizing_print.rst  doc_types.rst  index.rst  javascript.rst  permissions.rst  reporting.rst  roadmap.rst  settings.rst  themeing.rst  widgets.rst
docs/source/tutorial/: index.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst
docs/source/usage/: components.rst  integrating_into_django.rst  quickstart.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  tutorial_5.rst  tutorial_6.rst
erp_framework/: __init__.py  apps.py  checks.py  doc_types.py  sites.py
erp_framework/activity/: __init__.py  admin.py  apps.py  models.py
erp_framework/activity/migrations/: 0002_auto_20200711_1253.py
erp_framework/admin/: __init__.py  admin.py  apps.py  base.py  forms.py  helpers.py
erp_framework/admin/jazzmin_integration/: apps.py
erp_framework/admin/templates/_ra/: change_form.html  report_list.html  sidebar.html  view.html
erp_framework/admin/templates/admin/: base_site.html
erp_framework/admin/templates/erp_framework/: _reports_menu.html  base_site.html  js_resources.html  print_base.html  report.html  report_list.html  report_list_forms.html  report_widget_template.html  reports_menu.html  view.html  widget_template.html
erp_framework/admin/templates/ra/: report.html  report_list.html  report_widget_template.html
erp_framework/admin/templates/slick_reporting/: base.html
erp_framework/admin/templatetags/: erp_reporting_tags.py  ra_admin_list.py  ra_admin_tags.py  ra_tags.py  suit_menu.py
erp_framework/base/: app_settings.py  helpers.py  models.py  registry.py  widgets.py
erp_framework/erp/expense/: __init__.py  admin.py  apps.py  models.py  reports.py
erp_framework/erp/treasury/: __init__.py  admin.py  apps.py  models.py
erp_framework/project_template/: ra.py
erp_framework/project_template/project_template/project_name/: settings.py  urls.py
erp_framework/reporting/: __init__.py  admin.py  apps.py  models.py  printing.py  registry.py  views.py
erp_framework/reporting/migrations/: 0001_initial.py
erp_framework/reporting/templates/reporting/: flat_menu.html
erp_framework/reporting/templatetags/: _ra_tags.py  erp_reporting_tags.py
erp_framework/static/erp_framework/js/: erp_framework.datatable.js  erp_framework.js  erp_framework.report_loader.js
erp_framework/static/ra/js/: ra.datatable.js  ra.highchart.js  ra.js  ra.report_loader.js
erp_framework/top_search/: app_settings.py  apps.py  views.py
erp_framework/top_search/migrations/: 0001_initial.py
erp_framework/utils/: navigation.py  permissions.py  views.py
ra/: __init__.py  apps.py  checks.py
ra/activity/: __init__.py  admin.py  apps.py  models.py
ra/activity/migrations/: 0001_initial.py
ra/admin/: __init__.py  admin.py  apps.py  base.py  forms.py  helpers.py
ra/admin/templates/_adminlte/: app_index.html  delete_selected_confirmation.html  filter.html  login.html  menu.html  object_history.html  pagination.html  search_form.html  submit_line.html  view.html
ra/admin/templates/_ra/: base_site.html
ra/admin/templates/admin/: base_site.html
ra/admin/templates/adminlte/: __base.html  base.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  (+14 more)
ra/admin/templatetags/: ra_admin_list.py  ra_admin_tags.py  ra_tags.py  suit_menu.py
ra/base/: app_settings.py  cache.py  context_processors.py  helpers.py  loading.py  models.py  registry.py  widgets.py
ra/erp/expense/: __init__.py  admin.py  apps.py  models.py  reports.py
ra/erp/treasury/: __init__.py  admin.py  apps.py  models.py
ra/project_template/: ra.py
ra/reporting/: __init__.py  apps.py  base.py  crispy_layouts.py  decorators.py  fields.py  form_factory.py  form_fields.py  forms.py  generator.py  helpers.py  meta_data.py  printing.py  registry.py  views.py  views_v2.py
ra/reporting/templatetags/: ra_report_tags.py
ra/top_search/: __init__._py  app_settings.py  apps.py  forms.py  models.py  views.py
ra/top_search/migrations/: 0001_initial.py
ra/utils/: navigation.py  permissions.py  translation.py  views.py
tests/: .coveragerc  README.rst  _.coveragerc  requirements.txt  runtests.py  test_postgres.py
tests/registry_tests/: models.py  test_helpers.py  tests.py
tests/reporting_tests/: __init__.py  admin.py  apps.py  models.py  report_generators.py  reports.py  selenium_tests.py  test_admin.py  test_generator.py  tests.py  urls.py
tests/reporting_tests/templates/: client_view.html
tests/requirements/: py3.txt
(+110 files in other folders)
