[metadata]
license_file = LICENSE
name = django-ra
version = attr: ra.__version__
author = Ra Systems
author_email = ramez@rasystems.io
description = A light-weight effective Django based framework to create diverse business applications
long_description = file:README.rst
long_description_content_type=text/x-rst
url = https://github.com/ra-systems/RA
project_urls =
    Travis CI = https://travis-ci.org/ra-systems/RA/
    Ra documentation = https://ra-framework.readthedocs.io/en/latest/
    Ra source = https://github.com/ra-systems/RA
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6
install_requires=
	pytz
	django>=2.2.12
	psycopg2-binary
	simplejson
	django-crequest==2018.5.11
	django-tabular-permissions>=2.3
	django-crispy-forms==1.8.0
	dateutils==0.6.7
	unicodecsv==0.14.1
	swapper==1.1.1
	django-reversion>=3.0.5
	python-memcached
	django-slick-reporting

[options.entry_points]
console_scripts =
	ra-admin=ra.project_template.ra:main