[metadata]
license_files = LICENSE,
name = django-erp-framework
version = attr: erp_framework.__version__
author = Ramez Issac
author_email = ramez@rasystems.io
description = A light-weight effective Django based framework to create diverse business applications
long_description = file:README.rst
long_description_content_type=text/x-rst
url = https://github.com/RamezIssac/django-erp-framework
project_urls =
    Travis CI = https://travis-ci.org/ra-systems/RA/
    Documentation = https://django-erp-framework.readthedocs.io/en/latest/
    Source = https://github.com/ra-systems/RA
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6
install_requires=
	pytz
	django>=3.2
	simplejson
	django-crequest>=2018.5.11
	django-tabular-permissions
	django-crispy-forms
	dateutils
	django-reversion>=3.0.5
	django-slick-reporting
	django-jazzmin>=2.5.0
	django-compressor>=2.3


